<resources>
    <string name="app_name">Daily\nAssistant</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="sign_out">SignOut</string>
    <string name="api_user_id_google_sign_in">483260070919-a5satcn4th5e9uktqi5oqbm8nvf3mjit.apps.googleusercontent.com</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="quote">Quote</string>
    <string name="remember_user_name">Remember user name</string>
</resources>
