<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Daily Assistant"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        >

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@android:color/white"
            />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@android:color/white"
            android:inputType="textPassword"
            />


        <CheckBox
            android:id="@+id/rememberEmail_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:text="@string/remember_user_name"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:text="@string/login"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/SignUp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:text="@string/sign_up"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

        <com.google.android.gms.common.SignInButton

            android:id="@+id/button_google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>