<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlan"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.Toolbar
        android:id="@+id/child_toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme"
        app:titleTextColor="@color/colorAccent"
        />

    <TextView
        android:id="@+id/appTitleEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Edit plan"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/title"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:textColorHint="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/description"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:textColorHint="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="10dp"
            >

            <Button
                android:id="@+id/editCancel"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorPrimary"
                />

            <Button
                android:id="@+id/editOk"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>